hphp/hack/test/typecheck/yield_send2.php
<?hh

function i(?int $x): void {}

function f(): Generator<bool, string, int> {
  $x = yield true => 'troo';
  i($x);
}

function g(): void {
  $gen = f();
  $gen->send('blah');
}
